kubernetes/random-pick-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-pick-service
spec:
  type: NodePort
  selector:
    app: random-pick
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
